Import of NGS/Finance-Bank-JP-Mizuho-0.02 from CPAN.
gitpan-cpan-distribution: Finance-Bank-JP-Mizuho
gitpan-cpan-version:      0.02
gitpan-cpan-path:         NGS/Finance-Bank-JP-Mizuho-0.02.tar.gz
gitpan-cpan-author:       NGS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -15,7 +15,6 @@ license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
-module_name: Finance::Bank::JP::Mizuho
 name: Finance-Bank-JP-Mizuho
 no_index:
   directory:
@@ -31,4 +30,5 @@ requires:
   LWP::UserAgent: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.01
+  repository: http://github.com/ngs/p5-finance-bank-jp-mizuho
+version: 0.02
